# frsz

./: .clang-format  CMakeLists.txt  README.md  frsz.pc.in  frszConfig.cmake.in
include/: frsz.h  frsz2.hpp
src/: frsz.cc  frsz2.cc  frsz_version.h.in
test/: CMakeLists.txt  memory.cuh  test_frsz.cc  test_frsz_gpu.cu
